...
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_NameEdit"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:layout_toEndOf="@+id/ViewItem_TimeReqText"
        android:layout_alignBottom="@+id/ViewItem_NameText"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_PlayersEdit"
        android:layout_alignBottom="@+id/ViewItem_PlayersText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/ViewItem_TimeReqText"
        android:singleLine="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_AgeEdit"
        android:layout_above="@+id/ViewItem_TimeReqText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/ViewItem_TimeReqText"
        android:singleLine="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_TimeReqEdit"
        android:layout_above="@+id/ViewItem_PlatformText"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
        android:layout_toEndOf="@+id/ViewItem_TimeReqText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_PlatformEdit"
        android:layout_alignBottom="@+id/ViewItem_PlatformText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/ViewItem_TimeReqText"
        android:singleLine="true"/>

    <TextView
...
        android:layout_below="@+id/ViewItem_PlatformText"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_bidsListView"
        android:layout_below="@+id/ViewItem_ExistingBids_Text"
        android:layout_alignParentStart="true"
        android:isScrollContainer="false"
        android:layout_above="@+id/ViewItem_Save" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Amount"
...
        android:background="@color/colorLightRed" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" View Owner "
        android:id="@+id/ViewItem_ViewOwner"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/ViewItem_PlatformText"
        android:layout_marginBottom="26dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorLightRed" />

...
        android:background="@color/colorLightRed" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/ViewItem_Delete"
        android:layout_alignBottom="@+id/ViewItem_Cancel"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorLightRed" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Make Bid "
        android:id="@+id/ViewItem_Bid"
        android:layout_alignBottom="@+id/ViewItem_ViewOwner"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorLightRed" />

    <Button
...
        android:textColor="@color/colorWhite"
        android:background="@color/colorLightRed" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_bidValue"
        android:layout_below="@+id/ViewItem_PlaceBid_Text"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/ViewItem_bidsListView"
        android:numeric="decimal"
        android:layout_alignParentEnd="true"
        android:singleLine="true"
...
        android:layout_marginTop="10dp"
        android:layout_marginBottom="90dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_minAgeSpinner"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_toEndOf="@+id/ViewItem_TimeReqText"
        android:layout_alignBottom="@+id/ViewItem_AgeText"
        android:layout_alignTop="@+id/ViewItem_AgeText"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_minTimeSpinner"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_toEndOf="@+id/ViewItem_TimeReqText"
        android:layout_alignBottom="@id/ViewItem_TimeReqText"
        android:layout_alignTop="@id/ViewItem_TimeReqText"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_minPlayersSpinner"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_toEndOf="@+id/ViewItem_TimeReqText"
        android:layout_alignBottom="@id/ViewItem_PlayersText"
        android:layout_alignTop="@id/ViewItem_PlayersText"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_maxPlayersSpinner"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_toEndOf="@+id/to"
        android:layout_alignBottom="@id/ViewItem_PlayersText"
        android:layout_alignTop="@id/ViewItem_PlayersText"/>

    <TextView
...
        android:layout_alignTop="@id/ViewItem_PlayersText"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewItem_platformSpinner"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_toEndOf="@+id/ViewItem_TimeReqText"
        android:layout_alignBottom="@+id/ViewItem_PlatformText"
        android:layout_alignTop="@+id/ViewItem_PlatformText"/>

</RelativeLayout>
...
