...
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorSlateGrey3"
    tools:context=".ViewUserProfile">

    <TextView
        android:id="@+id/UserProfile"
        android:layout_width="match_parent"
        android:textSize="30sp"
        android:text="@string/userProfile"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
...
        android:textSize="@dimen/userProfile_Text"
        android:layout_below="@+id/Email"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorNavyBlue"/>

    <TextView
        android:id="@+id/UsernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/userProfile_Text"
        android:layout_alignTop="@+id/Username"
        android:layout_toEndOf="@+id/Username"
        android:textColor="@color/colorNavyBlue" />

    <EditText
        android:id="@+id/NameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/userProfile_Text"
        android:layout_alignTop="@+id/Name"
        android:layout_toEndOf="@+id/Name"
        android:background="@color/colorWhite"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/EmailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/userProfile_Text"
        android:layout_alignTop="@+id/Email"
        android:layout_toEndOf="@+id/Name"
        android:background="@color/colorWhite"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/PhoneText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/userProfile_Text"
        android:layout_alignTop="@+id/Phone"
        android:layout_toEndOf="@+id/Name"
        android:background="@color/colorWhite"
        android:phoneNumber="true"
        android:singleLine="true"/>

    <Button
        android:id="@+id/Update_Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update"
        android:layout_alignRight="@id/UserProfile"
        android:textColor="@color/colorWhite"
        android:background="@color/colorDarkOrange" />
...
