...
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:textSize="35sp"
        android:id="@+id/newBids"
        android:layout_alignEnd="@+id/Search_for_Items"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:layout_alignParentRight="false"
        android:elevation="1dp"
        android:layout_alignTop="@+id/View_My_Items"
        android:layout_above="@+id/View_My_Bids_Placed" />

    <TextView
        android:id="@+id/Menu"
        android:layout_width="match_parent"
        android:textSize="30sp"
...
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/View_My_Items"
        android:layout_alignEnd="@+id/View_My_Profile" />

    <Button
        android:id="@+id/Currently_Borrowed_Items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/userProfile_ButtonTopMargin"
        android:text="Currently Borrowed Items"
        android:textSize="@dimen/userProfile_Text"
        android:background="@color/colorDodgerBlue"
...
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/userProfile_ButtonTopMargin"
        android:text="Currently Lent Items"
        android:textSize="@dimen/userProfile_Text"
        android:background="@color/colorDodgerBlue"
        android:textColor="@color/colorWhite"
        android:id="@+id/Currently_Lent_Items"
        android:layout_below="@+id/Currently_Borrowed_Items"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/View_My_Profile" />

</RelativeLayout>
