...
    tools:context=".ViewItemsList"
    android:background="@color/colorSlateGrey3">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myItemsListView"
        android:layout_below="@+id/filterLinearLayout"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myItemsSearchView"
        android:layout_below="@+id/myItemsTextView"
        android:queryHint="Search..." />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Add New Item "
        android:id="@+id/myItemsAddItem"
        android:layout_below="@+id/myItemsListView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorLightRed" />

    <LinearLayout
...
